--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+/* css styling for the entire body */
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
 }
 
+/* Styling for the area where entries will be displayed */
 textarea {
   background: transparent;
   border: none;
@@ -30,6 +32,7 @@ textarea {
   border-top: 1px dashed #000000;
 }
 
+/* Shade the textareas based on the current time */
 .past {
   background-color: #d3d3d3;
   color: white;
@@ -45,6 +48,7 @@ textarea {
   color: white;
 }
 
+/* styling for the save button */
 .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
